--- a/harman_mahal_resume.tex
+++ b/harman_mahal_resume.tex
@@ -50,11 +50,12 @@
   }
 }
 
-\newcommand{\resumeSubheading}[4]{
+\newcommand{\resumeSubheading}[6]{
   \vspace{-1pt}\item
     \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
       \textit{\small#3} & \textit{\small #4} \\
+      \textbf{\textit{\small#5}} & \small#6
     \end{tabular*}\vspace{-5pt}
 }
 
@@ -99,37 +100,36 @@
     \resumeSubheading
       {Perked, Inc.}{Vancouver, BC}
       {Software Engineer, Intern}{May 2017 - Aug 2017}
+      {Technologies}{TypeScript, Node.js, MongoDB, React, Redux, JavaScript, Docker}
       \resumeItemListStart
         \resumeItem{User Action Flow Tracking}
-          {Designed and implemented end-to-end user tracking as a sole developer. Collected events from various event streams, cleaned and stored the raw data for analysis. Integrated the raw data with user data to identify and diagnose user errors.
-          \newline
-          \textbf{\textit{Technologies}}: TypeScript, Node.js, MongoDB, React}
+          {Designed and implemented end-to-end user tracking as a sole developer. Collected events from various event streams, cleaned and stored the raw data for analysis. Integrated the raw data with user data to identify and diagnose user errors.}
         \resumeItem{Admin Command Line Tools}
-          {Refactored existing Admin Command Line tools to move from JavaScript to TypeScript and make the codebase more functional. Added additional functionality to the tools to simplify and make the admin actions more efficient.}
+          {Refactored existing Admin Command Line tools to move from JavaScript to TypeScript and make the codebase more functional. Added additional functionality to the tools to simplify and make the admin actions more efficient.
+          }
       \resumeItemListEnd
 
     \resumeSubheading
       {MDA Corp.}{Richmond, BC}
       {Junior Software Developer, Co-op}{May 2016 - Dec 2016}
+      {Technologies}{ C\#, JavaScript, ColdFusion, Sitefinity, IIS, Windows Services, MSSQL}
       \resumeItemListStart
-        \resumeItem{Notifications}
-          {Service for sending email, push and in-app notifications. Involved in features such as delivery time optimization, tracking, queuing and A/B testing. Built an internal app to run batch campaigns for marketing etc.}
-        \resumeItem{Nostos}
-          {Bulk data processing and injection service from Hadoop to Cassandra and provides a thin REST layer on top for serving offline computed data online.}
-        \resumeItem{Workflows}
-          {Dataduct an open source workflow framework to create and manage data pipelines leveraging reusables patterns to expedite developer productivity.}
-        \resumeItem{Data Collection}
-          {Designed the internal survey and crowd sourcing platfowm which allowed for creating various tasks for crowd sourding or embedding surveys across the Coursera platform.}
+        \resumeItem{Job Board}
+          {Designed and created the job board to be used for the corporate and the internal sites as the sole developer. Replaced a legacy job posting system with a responsive and modern job board with input and feedback from multiple stakeholders across Canada. Integrated 3rd party data feed to create the corporate job board. Implemented user location based job sorting for the internal board. Created XML feeds for external job aggregators.
+          }
+        \resumeItem{Corporate Website}
+          {Planned and updated the corporate website to be mobile responsive as a part of a 2 person development team. Responsible for creating test environments and setting up staging sites. Assisted Marketing team with French localization. Improved website performance and made the code base more readable and reduced redundancy.
+          }
       \resumeItemListEnd
 
     \resumeSubheading
       {Ellebox Co.}{Vancouver, BC}
       {Web Developer}{May 2016 - Jan 2017}
+      {Technologies}{Python, JavaScript, Angular, Jinja2}
       \resumeItemListStart
-        \resumeItem{Portfolio Management}
-          {Created models for portfolio hedging,  portfolio optimization and price forecasting. Also creating a strategy backtesting engine used for simulating and backtesting strategies.}
-        \resumeItem{QuantDesk}
-          {Python backend for a web application used by hedge fund managers for portfolio management.}
+        \resumeItem{US \& Canada Websites}
+          {Updated the US website design and created the Canadian website. Created custom flow in order to make the customer purchase flow easier. Facilitate domain name registration, domain names migration and enabled HTTPS.
+          }
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -147,7 +147,7 @@
     \resumeSubItem{Slack Chatbot}
       {Created a slack chatbot for conducting surveys using TypeScript and Node.js. Surveys conducted using multiple option and text responses. Implemented response validation, summarizing and displaying survey results through slack.}
     \resumeSubItem{DankTank}
-      {2D Android game created using a custom game engine written from scratch. Used OpenData provided by City of New Westminster to introduce public art locations to the players.}
+      {2D Android game built from scratch. Used OpenData provided by City of New Westminster to introduce public art locations to the players.}
   \resumeSubHeadingListEnd
 
 %-----------EDUCATION-----------------
@@ -156,6 +156,7 @@
     \resumeSubheading
       {British Columbia Institute of Technology}{Burnaby, BC}
       {Computer Systems Technology, Technical Programming Option;  GPA: 91\%}{Sep. 2015 -- May. 2018}
+      {}{}
   \resumeSubHeadingListEnd
 
 
