--- a/harman_mahal_resume.tex
+++ b/harman_mahal_resume.tex
@@ -85,10 +85,10 @@
 \section{Programming Skills}
   \resumeSubHeadingListStart
     \item{
-      \textbf{Languages}{: C\#, Java, Javascript, TypeScript, C/C++, SQL}
+      \textbf{Languages}{: C\#, Java, Javascript, TypeScript, PHP, C/C++, SQL}
     }
     \item{
-      \textbf{Technologies}{: Azure, MongoDB, React, Docker, Unix/Linux, Node.js}
+      \textbf{Technologies}{: Azure, MongoDB, MSSQL, PostgreSQL, React, Docker, Unix/Linux, Node.js}
     }
   \resumeSubHeadingListEnd
 
